# Simple-interpreter

./: .bash_prompt  .gitignore  .pre-commit-config.yaml  Makefile  README.md  Vagrantfile  auto_activate_.venv.txt  provision.sh  pyproject.toml  setup.cfg
.github/workflows/: tests_and_linter.yml
interpreter/: __init__.py  ast.py  either.py  intereter.py  lexer.py  parser.py  token.py  visitor.py
interpreter/scripts/: interpreter.py
tests/: test_ast.py  test_either.py  test_interpreter.py  test_lexer.py  test_parser.py  test_token.py  test_users.py  test_visitor.py
