[tool.poetry]
name = "Simple-interpreter"
version = "0.3.0"
description = ""
authors = ["dosart"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^22.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
wemake-python-styleguide = "^0.17.0"
pytest-cov = "^4.0.0"

[tool.poetry.scripts]
hexlet-python-package = "hexlet_python_package.scripts.hexlet_python_package:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
